<resources>
    <string name="app_name">ivorie</string>
    <string name="app_url">https://www.ivoriechat.com</string>
    <!-- login -->
    <string name="title_activity_login">ivorie</string>
    <string name="login_progress_signing_in">In progress&#8230;</string>
    <string name="creating_in_progress">In progress&#8230;</string>
    <string name="register_new_account_hint">* If this is your first time to login, an account will be created for you.</string>
    <string name="check_terms_and_conditions_hint">Please agree to terms and privacy policy</string>
    <string name="prompt_country_calling_code">Country</string>
    <string name="prompt_phone_number">Mobile phone number</string>
    <string name="validation_code">One-Time Password</string>
    <string name="obtain_validation_code">Get OTP</string>
    <string name="obtain_code_success">OTP has been sent to your phone.</string>
    <string name="obtain_code_failure">SMS sent failure. Please try again.</string>
    <string name="action_sign_in_register"><b>Log In</b></string>

    <string-array name="country_calling_code">
        <item>US +1</item>
        <item>CN +86</item>
        <item>IN +91</item>
        <item>BR +55</item>
    </string-array>

    <string name="title_activity_terms_and_conditions">Terms of Service</string>
    <string name="i_certify_hereby">I agree to the </string>
    <string name="terms_and_conditions_hyperlink">Terms of Service</string>
    <string name="privacy_policies_hyperlink">Privacy Policies</string>

    <string name="error_input_field_empty">This field is empty</string>
    <string name="error_phone_number_empty">Please enter your mobile phone number</string>
    <string name="error_invalid_phone_number">Phone number is too short</string>
    <string name="error_validation_code_empty">Please enter the one-time password you have received</string>
    <string name="error_validation_code_too_short">The code is too short</string>
    <string name="error_validation_code_incorrect">The one-time password is wrong</string>
    <string name="error_user_not_exist">User does not exist</string>
    <string name="error_server_no_response">The server is out of service, please try again</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_chat">Chat</string>
    <string name="title_earn">Earn</string>
    <string name="title_vault">Vault</string>
    <string name="no_users_found">No users found</string>
    <string name="user_icon">icon</string>
    <string name="imageview_description">image</string>
    <string name="user_real_name">Real name</string>
    <string name="profile">Profile</string>
    <string name="fee_of_service_label">Charge</string>
    <string name="fee_unit">/hour</string>
    <string name="dollar_sign">$</string>
    <string name="qualification">Qualification</string>
    <string name="button_chat">Chat</string>
    <string name="request_for_camera_and_audio_permissions">You need to grant permission to camera and mic to start video chat</string>
    <!-- Prompt for RTC -->
    <string name="livecast_initiated">Live stream initiated</string>
    <string name="livecast_initiation_failure">Live stream initiation failed</string>
    <string name="livecast_terminated">Live stream terminated</string>
    <string name="connecting_livecast_in_progress">Connecting</string>
    <string name="remote_stream_received">Remote stream received</string>
    <string name="livecast_retrieval_failure">Fetching live stream failure</string>
    <string name="having_disconnected_livecast">You have disconnected live stream</string>
    <string name="no_livecast_in_progress">No live stream available</string>
    <string name="available_for_chat">Available for chat</string>
    <string name="connecting_video_call_in_progress">Connecing in progress</string>
    <string name="video_call_failed">Video call failed</string>
    <string name="balance_label">Balance</string>
    <string name="balance_unit">$</string>
    <string name="balance_value">balance</string>
    <string name="usdt">USDT</string>
    <string name="usdt_balance_text">usdt_balance</string>
    <string name="usdc">USDC</string>
    <string name="usdc_balance_text">usdc_balance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for application for verification -->
    <string name="user_name_label">Name</string>
    <string name="user_name_hint">Your real name</string>

    <string name="portrait">Portrait</string>
    <string name="select_image_source">Select the source for images</string>

    <string name="expected_usage">Role</string>
    <string name="expected_usage_notes">Select what you want to use ivorie for.</string>
    <string name="chat_to_earn_hint">Chat with people to earn money.</string>
    <string name="pay_to_chat_hint">Pay others to chat with you.</string>

    <string name="hourly_rate_label">Rate</string>
    <string name="hourly_rate_hint">Hourly rate in USD</string>
    <string name="hourly_rate_subtitle">How much you\'d like to get paid to chat with</string>
    <string name="hourly_rate_hint_for_chat_to_earn">How much you\'d like to get paid to chat with</string>
    <string name="hourly_rate_hint_for_pay_to_chat">How much you\'re willing to pay others to chat with you</string>

    <string name="self_description_label">About</string>
    <string name="self_description_hint">More details about you</string>
    <string name="self_description_notes">Let people know more about you.</string>
    <string name="apply_label">Apply</string>

    <string name="skills_label">Skill</string>
    <string name="skills_hint_default">Enter skills you desire or you possess. 5 items at most.</string>
    <string name="skills_hint_for_chat_to_earn">Skills you have. 5 items at most.</string>
    <string name="skills_hint_for_pay_to_chat">Skills you expect from people chatting with you. 5 items at most.</string>

    <string name="apply_for_verification">Apply for verification</string>
    <string name="apply">Apply</string>
    <string name="chat_to_earn">Chat to earn</string>
    <string name="pay_to_chat">Pay to chat</string>

    <string-array name="hourly_rate_in_usd">
        <item>3</item>
        <item>6</item>
        <item>9</item>
        <item>15</item>
        <item>18</item>
        <item>24</item>
        <item>30</item>
        <item>36</item>
        <item>48</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
        <item>1200</item>
        <item>1500</item>
        <item>3000</item>
        <item>6000</item>
        <item>9000</item>
        <item>12000</item>
    </string-array>

    <string name="submit_success">Success of application</string>
    <string name="submit_failure">Application failed</string>

    <string name="work_in_progress">In progress...</string>

    <!-- Authentication dialog fragment -->
    <string name="remind_authentication_dialog_title">Please login</string>
    <string name="remind_authentication_content">This feature requires authentication. Please log in to use it.</string>
    <string name="easy_authentication_hint">Hint: It is very easy to log in, and it takes less than 30 seconds.</string>
    <string name="authenticate_later">Dismiss</string>
    <string name="authenticate_now">Log in</string>
</resources>