<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_earning_users">

    <fragment
        android:id="@+id/navigation_earning_users"
        android:name="com.ivoriechat.android.ui.EarningUsersFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_earning_users" />

    <fragment
        android:id="@+id/navigation_paying_users"
        android:name="com.ivoriechat.android.ui.PayingUsersFragment"
        android:label="@string/title_earn"
        tools:layout="@layout/fragment_earning_users" />

    <fragment
        android:id="@+id/navigation_vault"
        android:name="com.ivoriechat.android.ui.VaultFragment"
        android:label="@string/title_vault"
        tools:layout="@layout/fragment_vault" />
</navigation>