<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.VaultFragment">


    <LinearLayout
        android:id="@+id/balance_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:padding="@dimen/large_padding"
        android:orientation="vertical"
        android:background="@drawable/layout_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/balance_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_headline_size_4"
            android:text="@string/balance_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/balance_unit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_headline_size_2"
                android:textColor="@color/ivorie_theme"
                android:text="@string/balance_unit" />

            <TextView
                android:id="@+id/aggregate_balance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:textSize="@dimen/text_size_headline_size_2"
                android:textColor="@color/ivorie_theme"
                android:text="@string/balance_value" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/usdt_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usdt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/usdt_balance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usdt_balance_text"
                android:layout_marginStart="@dimen/medium_margin"
                app:layout_constraintStart_toEndOf="@+id/usdt_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/usdc_balance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/usdc"
                app:layout_constraintStart_toEndOf="@+id/usdt_balance_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/usdc_balance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:text="@string/usdc_balance_text"
                app:layout_constraintStart_toEndOf="@+id/usdc_balance_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/apply_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/large_margin"
        android:padding="@dimen/large_padding"
        android:background="@drawable/layout_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/apply_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_construction_24" />

                <TextView
                    android:id="@+id/apply_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:layout_marginStart="@dimen/medium_margin" />
            </LinearLayout>

            <TextView
                android:id="@+id/apply_hint_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_for_verification" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>