<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/carerCardLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_border"
    android:layout_marginTop="@dimen/large_margin"
    android:layout_marginBottom="@dimen/large_margin"
    android:layout_marginStart="@dimen/medium_margin"
    android:layout_marginEnd="@dimen/medium_margin"
    android:paddingTop="@dimen/large_padding"
    android:paddingBottom="@dimen/large_padding"
    android:paddingStart="@dimen/medium_padding"
    android:paddingEnd="@dimen/medium_padding">

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:contentDescription="@string/user_icon"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/status_badge_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:contentDescription="@string/imageview_description"
        android:src="@drawable/ic_baseline_circle_16"
        app:layout_constraintTop_toTopOf="@+id/user_icon"
        app:layout_constraintEnd_toEndOf="@+id/user_icon"
        app:tint="@color/red_500" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/user_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/user_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_real_name"
            android:textSize="@dimen/text_size_medium"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textColor="@color/text_label"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"/>

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="14sp"
            android:maxLines="4"
            android:ellipsize="end"
            android:textColor="@color/event_card_details"
            android:layout_marginBottom="@dimen/small_margin"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/currency_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar_sign"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/ivorie_theme"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/hourly_rate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fee_of_service_label"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/ivorie_theme"
                android:layout_marginStart="@dimen/small_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/currency_symbol"/>

            <TextView
                android:id="@+id/rate_unit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/extra_small_padding"
                android:text="@string/fee_unit"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/ivorie_theme"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hourly_rate_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_start_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/button_chat"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>