<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:appcompat="http://schemas.android.com/tools"
    tools:context=".ui.LoginActivity"
    android:id="@+id/main_body_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/large_margin"
                android:src="@drawable/ivorie_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_headline_size_3"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/payment_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/country_calling_code_select_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:hint="@string/prompt_country_calling_code"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" >

                    <AutoCompleteTextView
                        android:id="@+id/country_calling_code_select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phone_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/country_calling_code_select_container"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/validation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginBottom="@dimen/large_margin"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/validation_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="@string/validation_code"
                    android:inputType="number"
                    android:maxLines="1" />

                <Button
                    android:id="@+id/obation_code_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/button_of_obtain_validation_code"
                    android:textColor="@drawable/button_text_color_of_obtain_validation_code"
                    android:text="@string/obtain_validation_code"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/large_margin"
                android:background="@drawable/button"
                android:text="@string/action_sign_in_register"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <LinearLayout
                android:id="@+id/new_user_hint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/new_user_hint_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_new_account_hint" />

            </LinearLayout>

            <View
                android:id="@+id/spacing_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="100" />

            <LinearLayout
                android:id="@+id/terms_and_conditions_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginBottom="@dimen/large_margin"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/agreeCheckBox"
                    style="@android:style/Theme.Holo.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:buttonTint="@color/ivorie_theme"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/terms_and_conditions_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_certify_hereby" />

                <TextView
                    android:id="@+id/terms_and_conditions_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onTermsAndConditions"
                    android:text="@string/terms_and_conditions_hyperlink"
                    android:textColor="@color/ivorie_theme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" and " />

                <TextView
                    android:id="@+id/privacy_policies_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onPrivacyPolicies"
                    android:text="@string/privacy_policies_hyperlink"
                    android:textColor="@color/ivorie_theme" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
